--- a/development/app/css/branding.css
+++ b/development/app/css/branding.css
@@ -3,8 +3,9 @@
 */
 
 :root {
-  --font-primary:     'Montserrat', sans-serif;
-  --font-secondary:   'Montserrat', sans-serif;
+  --font-primary:          'Dosis', sans-serif;
+  --font-secondary:        'Raleway', sans-serif;
+  --font-secondary-bold:   'Montserrat', sans-serif;
 
   --brand-primary:    rgba(55,171,46,1);
   --brand-secondary:  white;
