--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -1,44 +1,29 @@
 @import "../../css/branding.css";
 
-.teams {
+.match-header {
+  font-family: var(--font-primary);
+  font-size: 2.6em;
+  margin-bottom: 1.4em;
+}
+
+.team-sheet-header {
+  font-size: 1.3em;
+  font-weight: bold;
+  font-family: var(--font-primary);
+  margin-bottom: 1.1em;
+}
+
+.chevron {
+  margin-left: 10px;
+  font-size: 0.7em;
+}
+
+.referee {
+  font-size: 0.8em;
+  font-family: var(--font-primary);
+}
+
+.player {
+  font-size: 0.9em;
   font-family: var(--font-secondary);
-  font-size: 1.6em;
-  text-transform: uppercase;
-  color: black;
-}
-
-.goals {
-  font-family: var(--font-secondary);
-  font-size: 1.5em;
-  color: black;
-  float: right;
-}
-
-.link {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer;
-}
-
-.match-list {
-  list-style: none;
-}
-
-.match-list < li {
-  background-color: white;
-}
-
-.kick-off {
-  line-height: normal;
-  font-size: 1.2em;
-}
-
-.full-time {
-  background: repeating-linear-gradient(
-    45deg,
-    white,
-    white 10px,
-    whitesmoke 10px,
-    whitesmoke 20px
-  );
 }
