Adding errors screen

--- a/development/app/css/branding.css
+++ b/development/app/css/branding.css
@@ -9,4 +9,6 @@
 
   --brand-primary:    rgba(55,171,46,1);
   --brand-secondary:  white;
+  --brand-danger:     #ed5c5c;
+  --brand-tertiary:   #66d3e4;
 }
