--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -16,6 +16,7 @@
 .chevron {
   margin-left: 10px;
   font-size: 0.7em;
+  cursor: pointer;
 }
 
 .referee {
@@ -26,4 +27,10 @@
 .player {
   font-size: 0.9em;
   font-family: var(--font-secondary);
+}
+
+.progress {
+  margin-top: 100px;
+  font-size: 7em;
+  text-align: center;
 }
