--- a/development/app/pages/Errors.css
+++ b/development/app/pages/Errors.css
@@ -6,19 +6,24 @@
    left: 0;
    width: 100%;
    height: 100%;
-   background-color: var(--brand-primary)
+   background-color: var(--brand-danger);
+   text-align: center;
 }
 
-.brand {
+.error {
    font-family: var(--font-primary);
    color: var(--brand-secondary);
    font-size: 6em;
-   text-align: center;
+
    margin-top: 30vh;
 }
 
-.loader {
+.message {
+   font-family: var(--font-secondary);
    color: var(--brand-secondary);
-   text-align: center;
    margin-top: 20px;
+}
+
+.emoji {
+  font-size: 0.5em;
 }
