Adding attempt at more responsive page

--- a/development/app/css/branding.css
+++ b/development/app/css/branding.css
@@ -6,6 +6,7 @@
   --font-primary:          'Dosis', sans-serif;
   --font-secondary:        'Raleway', sans-serif;
   --font-secondary-bold:   'Montserrat', sans-serif;
+  --font-questions:        'Work Sans', sans-serif;
 
   --brand-primary:    rgba(55,171,46,1);
   --brand-secondary:  white;
