--- a/development/app/components/Matches/Questions/styles.css
+++ b/development/app/components/Matches/Questions/styles.css
@@ -1,38 +1,50 @@
 @import "../../../css/branding.css";
 
+.question {
+	font-family: var(--font-questions);
+}
+
+.question h2 {
+	margin: 5px 0px;
+}
+
+.question-buttons {
+	margin-top: 10px;
+}
+
 .animate {
 	transition: all 0.1s;
 	-webkit-transition: all 0.1s;
 }
 
 .action-button {
-	position: relative;
-	margin: 0px 10px 10px 0px;
-	padding: 0.4em 1.6em;
+	margin: 0px 0.4em 0.4em 0px;
+	padding: 0.4em 1.6em; /**/
 	border-radius: 0.4em;
 	font-family: var(--font-secondary);
 	font-size: 1em;
 	color: white;
+	float: left;
 	text-decoration: none;
 	cursor: pointer;
 }
 
 .red {
 	background-color: var(--brand-danger);
-	border-bottom: 5px solid #BD3E31;
+	border-bottom: 0.2em solid #BD3E31;
 }
 
 .green {
 	background-color: var(--brand-primary);
-	border-bottom: 5px solid #329B28;
+	border-bottom: 0.2em solid #329B28;
 }
 
 .green:hover {
-	color: whitesmoke;
+	color: black;
 }
 
 .red:hover {
-	color: whitesmoke;
+	color: black;
 }
 
 .action-button:hover {
@@ -40,7 +52,7 @@
 }
 
 .action-button:active {
-	transform: translate(0px, -0.4em);
-  -webkit-transform: translate(0px, -0.4em);
-	border-bottom: 1px solid;
+	-webkit-transform: translate(0px, 0.2em);
+	transform: translate(0px, 0.2em);
+	border-bottom: 0.1em solid;
 }
