--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -29,7 +29,7 @@
   font-family: var(--font-secondary);
 }
 
-.progress {
+.loading {
   margin-top: 100px;
   font-size: 7em;
   text-align: center;
