--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -3,7 +3,8 @@
 .match-header {
   font-family: var(--font-primary);
   font-size: 2.6em;
-  margin-bottom: 1.4em;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .team-sheet-header {
@@ -33,4 +34,8 @@
   margin-top: 100px;
   font-size: 7em;
   text-align: center;
+}
+
+.spacer {
+  margin-bottom: 2em;
 }
