--- a/development/app/components/Questions/styles.css
+++ b/development/app/components/Questions/styles.css
@@ -58,6 +58,12 @@
 	color: white;
 }
 
+@media (max-width: 768px){
+	.question h3 {
+		margin: 5px 0px;
+	}
+}
+
 @media (min-width: 768px) {
 	.green:hover {
 		color: black;
