--- a/development/app/css/branding.css
+++ b/development/app/css/branding.css
@@ -4,7 +4,7 @@
 
 :root {
   --font-primary:          'Dosis', sans-serif;
-  --font-secondary:        'Raleway', sans-serif;
+  --font-secondary:        'Work Sans', sans-serif;
   --font-secondary-bold:   'Montserrat', sans-serif;
   --font-questions:        'Work Sans', sans-serif;
 
