--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -1,40 +1,40 @@
 @import "../../css/branding.css";
 
 .match-header {
-  font-family: var(--font-primary);
-  font-size: 2.6em;
+  font-family: var(--font-secondary);
+  font-size: 2.8rem;
   margin-top: 20px;
   margin-bottom: 30px;
 }
 
 .team-sheet-header {
-  font-size: 1.8em;
+  font-size: 1.8rem;
   font-family: var(--font-primary);
-  margin-bottom: 1.1em;
+  margin-bottom: 1.1rem;
 }
 
 .chevron {
   margin-left: 10px;
-  font-size: 0.7em;
+  font-size: 0.7rem;
   cursor: pointer;
 }
 
 .referee {
-  font-size: 0.8em;
+  font-size: 0.8rem;
   font-family: var(--font-primary);
 }
 
 .player {
-  font-size: 0.9em;
+  font-size: 0.9rem;
   font-family: var(--font-secondary);
 }
 
 .loading {
   margin-top: 100px;
-  font-size: 7em;
+  font-size: 7rem;
   text-align: center;
 }
 
 .spacer {
-  margin-bottom: 2em;
+  margin-bottom: 2rem;
 }
