--- a/development/app/pages/banners/Errors.css
+++ b/development/app/pages/banners/Errors.css
@@ -13,7 +13,7 @@
 .error {
    font-family: var(--font-primary);
    color: var(--brand-secondary);
-   font-size: 6em;
+   font-size: 6rem;
 
    margin-top: 30vh;
 }
@@ -25,5 +25,5 @@
 }
 
 .emoji {
-  font-size: 0.5em;
+  font-size: 0.5rem;
 }
