--- a/development/app/pages/banners/Login.css
+++ b/development/app/pages/banners/Login.css
@@ -12,7 +12,7 @@
 .brand {
    font-family: var(--font-primary);
    color: var(--brand-secondary);
-   font-size: 6em;
+   font-size: 6rem;
    text-align: center;
    margin-top: 24vh;
 }
@@ -21,7 +21,7 @@
   margin-top: 50px;
   font-family: var(--font-primary);
   color: var(--brand-secondary);
-  font-size: 1.4em;
+  font-size: 1.4rem;
   text-align: center;
 }
 
