--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -2,15 +2,23 @@
 
 .match-header {
   font-family: var(--font-secondary);
-  font-size: 2.8rem;
+  font-size: 3rem;
   margin-top: 20px;
   margin-bottom: 30px;
 }
 
 .team-sheet-header {
-  font-size: 1.8rem;
+  font-size: 2.8rem;
   font-family: var(--font-primary);
-  margin-bottom: 1.1rem;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.subs {
+  font-size: 2.2rem;
+  font-family: var(--font-primary);
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .chevron {
@@ -20,12 +28,12 @@
 }
 
 .referee {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   font-family: var(--font-primary);
 }
 
 .player {
-  font-size: 0.9rem;
+  font-size: 1.4rem;
   font-family: var(--font-secondary);
 }
 
