--- a/development/app/pages/banners/Splash.css
+++ b/development/app/pages/banners/Splash.css
@@ -12,7 +12,7 @@
 .brand {
    font-family: var(--font-primary);
    color: var(--brand-secondary);
-   font-size: 6rem;
+   font-size: 6em;
    text-align: center;
    margin-top: 30vh;
 }
