--- a/development/app/pages/sections/MatchList.css
+++ b/development/app/pages/sections/MatchList.css
@@ -1,9 +1,10 @@
 @import "../../css/branding.css";
 
 .spacer {
-  margin-bottom: 2rem;
+  margin-bottom: 36px;
 }
 
 .header {
   font-family: var(--font-primary);
+  margin-top: 20px;
 }
