--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -4,7 +4,11 @@
   font-family: var(--font-secondary);
   font-size: 3rem;
   margin-top: 20px;
-  margin-bottom: 30px;
+}
+
+.teams-link {
+  font-family: var(--font-secondary);
+  font-size: 3rem;
 }
 
 .team-sheet-header {
@@ -45,4 +49,14 @@
 
 .spacer {
   margin-bottom: 2rem;
+}
+
+@media (min-width: 768px){
+	.match-header {
+    margin-bottom: 30px;
+	}
+
+  .teams-link {
+    margin-top: 20px;
+  }
 }
