--- a/development/app/components/Questions/styles.css
+++ b/development/app/components/Questions/styles.css
@@ -35,6 +35,11 @@
 	color: var(--brand-danger);
 }
 
+.results-indicator {
+	margin-top: 10px;
+	padding-right: 20px;
+}
+
 .question-group .time, .group-title {
 	font-size: 	1.8rem;
 }
