Changing kick off globally to a moment

--- a/development/app/components/Scores/styles.css
+++ b/development/app/components/Scores/styles.css
@@ -7,6 +7,15 @@
   color: black;
 }
 
+.spacer {
+  margin-bottom: 36px;
+}
+
+.fixture-list-header {
+  font-family: var(--font-primary);
+  margin-top: 20px;
+}
+
 .goals {
   font-family: var(--font-secondary-bold);
   font-size: 1.4rem;
