--- a/development/app/components/Stats/styles.css
+++ b/development/app/components/Stats/styles.css
@@ -4,5 +4,36 @@
   font-family: var(--font-secondary);
   font-size: 3rem;
   margin-top: 20px;
+  border-bottom: 1px solid whitesmoke;
+  padding-bottom: 10px;
   margin-bottom: 20px;
+}
+
+.overall {
+  font-family: var(--font-secondary);
+  font-size: 2.2rem;
+  margin-bottom: 20px;
+}
+
+.verdict {
+  font-family: var(--font-secondary);
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+.loading {
+  margin-top: 100px;
+  font-size: 7rem;
+  text-align: center;
+}
+
+.referee {
+  font-size: 1.8rem;
+  font-family: var(--font-secondary);
+}
+
+.decision {
+  text-transform: uppercase;
+  color: var(--brand-danger);
+  font-family: var(--font-secondary);
 }
