--- a/development/app/pages/banners/UsersPage.css
+++ b/development/app/pages/banners/UsersPage.css
@@ -14,13 +14,20 @@
 .brand {
    font-family: var(--font-primary);
    font-size: 6em;
-   margin-top: 10vh;
+   margin-top: 6vh;
 }
 
 .question {
   font-family: var(--font-primary);
   font-size: 2.6em;
-  margin-top: 50px;
+  margin: 60px 0px;
+}
+
+.clubs-container {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding-top: 20px;
 }
 
 .clubs {
@@ -40,4 +47,5 @@
 .clubs img {
   height: 100px;
   width: 100px;
+  cursor: pointer;
 }
