--- a/development/app/components/Users/styles.css
+++ b/development/app/components/Users/styles.css
@@ -1,10 +1,17 @@
 @import "../../css/branding.css";
 
+.question {
+  font-family: var(--font-primary);
+  font-size: 2.6em;
+  margin: 50px 0px;
+  flex: 0 1 auto;
+}
+
 .clubs-container {
   background-color: white;
   width: 100%;
-  height: 100%;
   padding-top: 20px;
+  flex: 1 1 auto;
 }
 
 .clubs {
@@ -18,7 +25,7 @@
   display: inline-block;
   width: 100px;
   padding: 8px;
-  margin: 5px;
+  box-sizing: content-box;
 }
 
 .clubs li:hover {
@@ -35,4 +42,5 @@
   margin-top: 100px;
   font-size: 7rem;
   text-align: center;
+  color: var(--brand-secondary);
 }
