--- a/development/app/pages/banners/UsersPage.css
+++ b/development/app/pages/banners/UsersPage.css
@@ -1,9 +1,8 @@
 @import "../../css/branding.css";
 
 .splash {
-   position: absolute;
-   top: 0;
-   left: 0;
+   display: flex;
+   flex-flow: column;
    width: 100%;
    height: 100%;
    background-color: var(--brand-primary);
@@ -15,37 +14,5 @@
    font-family: var(--font-primary);
    font-size: 6em;
    margin-top: 6vh;
-}
-
-.question {
-  font-family: var(--font-primary);
-  font-size: 2.6em;
-  margin: 60px 0px;
-}
-
-.clubs-container {
-  background-color: white;
-  width: 100%;
-  height: 100%;
-  padding-top: 20px;
-}
-
-.clubs {
-  text-align: center;
-  padding: 0px;
-  margin: 0px;
-}
-
-.clubs li {
-  text-decoration: none;
-  display: inline-block;;
-  width: 100px;
-  padding: 8px;
-  margin: 5px;
-}
-
-.clubs img {
-  height: 100px;
-  width: 100px;
-  cursor: pointer;
+   flex: 0 1 auto;
 }
