--- a/development/app/components/Questions/styles.css
+++ b/development/app/components/Questions/styles.css
@@ -1,5 +1,11 @@
 @import "../../css/branding.css";
 
+.button {
+	float: left;
+	font-size: 1rem;
+	margin: 0px 0.4rem 0.4rem 0px;
+}
+
 .questions-list {
 	font-family: var(--font-questions);
 }
