--- a/development/app/components/Users/styles.css
+++ b/development/app/components/Users/styles.css
@@ -1,8 +1,13 @@
 @import "../../css/branding.css";
 
+.button {
+  font-size: 1.8rem;
+  margin-left: 1rem;
+}
+
 .question {
   font-family: var(--font-primary);
-  font-size: 2.6em;
+  font-size: 3em;
   margin: 50px 0px;
   flex: 0 1 auto;
 }
@@ -52,4 +57,38 @@
   font-size: 7rem;
   text-align: center;
   color: var(--brand-secondary);
+}
+
+.asl-container {
+  font-family: var(--font-secondary);
+  background-color: white;
+  width: 100%;
+  padding-top: 20px;
+  flex: 1 1 auto;
+}
+
+.sex-select {
+  width: 160px;
+}
+
+section {
+  margin-top: 20px;
+}
+
+select {
+  font-size: 1.8rem;
+  color: black;
+
+  height: 36px;
+
+  padding: 6px;
+  margin-right: 10px;
+
+  background-color: white;
+  border-color: whitesmoke;
+}
+
+select > option {
+   background: white;
+   font-weight: lighter;
 }
