--- a/development/app/components/Users/styles.css
+++ b/development/app/components/Users/styles.css
@@ -1,10 +1,5 @@
 @import "../../css/branding.css";
 
-.button {
-  font-size: 1.8rem;
-  margin-left: 1rem;
-}
-
 .question {
   font-family: var(--font-primary);
   font-size: 3em;
@@ -71,16 +66,20 @@
   width: 160px;
 }
 
+.button {
+  font-size: 1.6em;
+  margin-left: 1em;
+}
+
 section {
   margin-top: 20px;
 }
 
 select {
-  font-size: 1.8rem;
+  font-size: 1.6em;
   color: black;
 
-  height: 36px;
-
+  height: 2.4em;
   padding: 6px;
   margin-right: 10px;
 
@@ -88,7 +87,20 @@ select {
   border-color: whitesmoke;
 }
 
+select:first-child {
+  margin-right: 0px;
+}
+
 select > option {
    background: white;
    font-weight: lighter;
+}
+
+@media (max-width: 768px){
+	select {
+    -webkit-appearance: none;
+    -moz-appearance:    none;
+    appearance:         none;
+    font-size: 1.2em;
+  }
 }
