--- a/development/app/components/Stats/styles.css
+++ b/development/app/components/Stats/styles.css
@@ -15,10 +15,29 @@
   margin-bottom: 20px;
 }
 
-.verdict {
+.verdict-header {
   font-family: var(--font-secondary);
   font-size: 3rem;
   margin-bottom: 20px;
+}
+
+.verdict {
+  font-family: var(--font-secondary);
+  font-size: 5rem;
+  margin-bottom: 20px;
+  font-weight: bolder;
+  color: var(--brand-no);
+  text-transform: uppercase;
+}
+
+.confidence {
+  font-size: 1.4rem;
+  font-family: var(--font-primary);
+}
+
+.confidence-score {
+  color: var(--brand-danger);
+  text-transform: uppercase;
 }
 
 .loading {
