--- a/public/css/font-size.css
+++ b/public/css/font-size.css
@@ -1,9 +1,9 @@
-body {
+html {
    font-size: 10px !important;
 }
 
 @media (max-width: 768px){
-	body {
-		font-size: 8px !important;
+	html {
+		font-size: 9px !important;
 	}
 }
