Adding clubs to highlights.

--- a/development/app/components/Stats/styles.css
+++ b/development/app/components/Stats/styles.css
@@ -25,6 +25,7 @@
    border: 1px solid whitesmoke;
    background-color: whitesmoke;
    border-radius: 4px;
+   margin-bottom: 20px;
 }
 
 .highlight h2 {
@@ -65,8 +66,7 @@
 .confidence {
   font-size: 1.4rem;
   font-family: var(--font-primary);
-  text-align: right;
-  margin-right: 2vw;
+  text-align: center;
 }
 
 .confidence-score {
