--- a/development/app/components/Stats/styles.css
+++ b/development/app/components/Stats/styles.css
@@ -2,15 +2,15 @@
 
 .header {
   font-family: var(--font-secondary);
-  font-size: 3rem;
-  margin-top: 10px;
+  font-size: 3.2rem;
+  margin-top: 20px;
   border-bottom: 1px solid whitesmoke;
   padding-bottom: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 1em;
+  text-align: center;
 }
 
 .overall {
-   margin-top: 20px;
    margin-bottom: 20px;
 }
 
@@ -25,7 +25,7 @@
    border: 1px solid whitesmoke;
    background-color: whitesmoke;
    border-radius: 4px;
-   margin-bottom: 20px;
+   margin-bottom: 1.4em;
 }
 
 .highlight h2 {
@@ -50,8 +50,8 @@
    color: white;
    text-align: center;
    border-radius: 4px;
-   margin: 0px 40px;
-   margin-bottom: 20px;
+   margin: 0px 2em;
+   margin-bottom: 1.8em;
 }
 
 .verdict h1 {
@@ -89,4 +89,18 @@
   text-transform: uppercase;
   color: var(--brand-danger);
   font-family: var(--font-secondary);
+}
+
+@media(max-width: 768px){
+   .verdict h1 {
+      font-size: 2.4rem;
+   }
+
+   .highlight h2 {
+      font-size: 2rem;
+   }
+
+   .confidence {
+     font-size: 1rem;
+   }
 }
