--- a/development/app/components/Stats/styles.css
+++ b/development/app/components/Stats/styles.css
@@ -20,6 +20,16 @@
   margin-bottom: 20px;
 }
 
+.clubs {
+   margin-bottom: 20px;
+}
+
+.clubs h3 {
+  font-family: var(--font-secondary);
+  font-size: 2.2rem;
+  margin-bottom: 20px;
+}
+
 .highlight {
    padding: 5px;
    border: 1px solid whitesmoke;
