--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -51,6 +51,29 @@
   margin-bottom: 2rem;
 }
 
+.match-rating {
+   background-color: var(--brand-no);
+   padding: 2px;
+   color: white;
+   text-align: center;
+   border-radius: 4px;
+   margin: 0px 2em;
+   margin-bottom: 1.8em;
+}
+
+.match-rating h3 {
+   font-family: var(--font-secondary);
+   font-size: 2.6rem;
+   color: white;
+}
+
+.match-rating h2 {
+   font-family: var(--font-secondary);
+   text-transform: uppercase;
+   font-size: 4.6rem;
+   color: white;
+}
+
 @media (min-width: 768px){
 	.match-header {
     margin-bottom: 30px;
@@ -58,5 +81,13 @@
 
   .teams-link {
     margin-top: 20px;
+  }
+
+  .verdict h3 {
+     font-size: 2rem;
+  }
+
+  .verdict h2 {
+     font-size: 3rem;
   }
 }
