--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -75,6 +75,29 @@
    color: white;
 }
 
+.ref-rating {
+   background-color: var(--brand-danger);
+   padding: 2px;
+   color: white;
+   text-align: center;
+   border-radius: 4px;
+   margin: 0px 2em;
+   margin-bottom: 1.8em;
+}
+
+.ref-rating h3 {
+   font-family: var(--font-secondary);
+   font-size: 1.4rem;
+   color: white;
+}
+
+.ref-rating h2 {
+   font-family: var(--font-secondary);
+   text-transform: uppercase;
+   font-size: 2rem;
+   color: white;
+}
+
 @media (min-width: 768px){
 	.match-header {
     margin-bottom: 30px;
