--- a/development/app/components/Referees/styles.css
+++ b/development/app/components/Referees/styles.css
@@ -34,3 +34,25 @@
 .ref-row:nth-child(odd) {
    background-color: whitesmoke;
 }
+
+.movement {
+   float: right;
+}
+
+.moved-up {
+   padding: 0px;
+	width: 0;
+	height: 0;
+	border-left: 1em solid transparent;
+	border-right: 1em solid transparent;
+	border-bottom: 2em solid var(--brand-primary);
+}
+
+.moved-down {
+   padding: 0px;
+	width: 0;
+	height: 0;
+	border-left: 1em solid transparent;
+	border-right: 1em solid transparent;
+	border-top: 2em solid var(--brand-danger);
+}
