--- a/development/app/pages/banners/PrivateBrowsing.css
+++ b/development/app/pages/banners/PrivateBrowsing.css
@@ -10,6 +10,10 @@
    text-align: center;
 }
 
+.container {
+   margin: 0 4vw;
+}
+
 .error {
    font-family: var(--font-primary);
    color: var(--brand-secondary);
@@ -20,7 +24,7 @@
 .message {
    font-family: var(--font-secondary);
    color: var(--brand-secondary);
-   margin-top: 20px;
+   margin-top: 40px;
    font-size: 1.6rem;
 }
 
@@ -36,6 +40,6 @@
 .tldr {
    font-family: var(--font-secondary);
    color: var(--brand-secondary);
-   margin-top: 20px;
+   margin-top: 60px;
    font-size: 2.8rem;
 }
