Improving scoring for referee - this should be refined. Adding pa11y testing. Improving the login page with a11y results

--- a/development/app/components/UserScore/styles.css
+++ b/development/app/components/UserScore/styles.css
@@ -27,7 +27,14 @@
    font-size: 2rem;
 }
 
-.career .heading {
+.ranking .subheading {
+   font-size: 2rem;
+   text-align: center;
+   margin-bottom: 10px;
+}
+
+.ranking .heading {
+   color: var(--brand-no);
    font-size: 4rem;
    text-align: center;
    margin-bottom: 30px;
