Adding separate rating page, and adding link to it once scoring is complete on match page.

--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -99,6 +99,16 @@
    color: white;
 }
 
+.scores-ready {
+   font-family: var(--font-secondary);
+   margin-bottom: 1.4em;
+   font-size: 1.2rem;
+}
+
+.scores-ready a {
+   color: var(--brand-no);
+}
+
 @media (min-width: 768px){
    .teams-link {
       margin-top: 20px;
