--- a/development/app/components/UserScore/styles.css
+++ b/development/app/components/UserScore/styles.css
@@ -72,6 +72,23 @@
    font-size: 1.4rem;
 }
 
+.top-answer {
+   font-family: var(--font-secondary);
+   margin-bottom: 12px;
+}
+
+.top-answer .heading {
+   font-size: 2.2rem;
+}
+
+.top-answer h2 {
+	font-size: 2rem;
+}
+
+.top-answer h3,h4 {
+	font-size: 1.6rem;
+}
+
 .score {
    text-align: center;
    padding: 30% 0;
