Minor css tweaks

--- a/development/app/components/Matches/styles.css
+++ b/development/app/components/Matches/styles.css
@@ -2,9 +2,12 @@
 
 .match-header {
   font-family: var(--font-secondary);
-  font-size: 3rem;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
+}
+
+.match-header h2 {
+   font-size: 3rem;
 }
 
 .teams-link {
