--- a/development/app/components/Referees/styles.css
+++ b/development/app/components/Referees/styles.css
@@ -6,53 +6,43 @@
   text-align: center;
 }
 
-.referees {
+.referee-header {
    font-family: var(--font-secondary);
-   margin-bottom: 40px;
+   font-size: 3rem;
+   margin-top: 20px;
+   margin-bottom: 20px;
 }
 
-.header {
-   font-size: 3.4rem;
-   margin-bottom: 50px;
-   text-align: center;
+.question-scores {
+   font-family: var(--font-secondary);
 }
 
-.ref-row {
-   padding-bottom: 20px;
-   margin-bottom: 5px;
-   border-radius: 4px;
+.question-scores .heading {
+   font-size: 2.6rem;
 }
 
-.ref-row * {
-   padding: 3px;
+.overall-ranking {
+   font-family: var(--font-secondary);
+   margin-bottom: 30px;
 }
 
-.ref-row .name {
-   font-size: 2rem;
+.overall-ranking h1 {
+   font-size: 2.2rem;
 }
 
-.ref-row:nth-child(odd) {
-   background-color: whitesmoke;
+.overall-ranking h2 {
+   font-size: 3.2rem;
+   color: var(--brand-no);
 }
 
-.movement {
-   float: right;
+.recent-matches {
+   font-family: var(--font-secondary);
 }
 
-.moved-up {
-   padding: 0px;
-	width: 0;
-	height: 0;
-	border-left: 1em solid transparent;
-	border-right: 1em solid transparent;
-	border-bottom: 2em solid var(--brand-primary);
+.recent-matches .heading {
+   font-size: 3rem;
 }
 
-.moved-down {
-   padding: 0px;
-	width: 0;
-	height: 0;
-	border-left: 1em solid transparent;
-	border-right: 1em solid transparent;
-	border-top: 2em solid var(--brand-danger);
+.link {
+   font-size: 1.4rem;
 }
