--- a/development/app/components/Matches/ratings.css
+++ b/development/app/components/Matches/ratings.css
@@ -1,5 +1,11 @@
 @import "../../css/branding.css";
 
+.loading {
+  margin-top: 100px;
+  font-size: 7rem;
+  text-align: center;
+}
+
 .question-scores {
 	font-family: var(--font-questions);
 }
